--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-    <meta property="og:image" content="img/favicon.png">
+    <meta property="og:image" content="img/d5eee9907284ddda8495.jpg">
     <meta property="og:url" content="https://tako0w0skw.github.io/qviet/">
 </head>
 <body>
